# forge-film

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  forge.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: compare.py  mock_runner.py
examples/: detective.txt  multi_backend_demo.txt  romance.txt
forge/: cli.py  config.py
forge/assembler/: stream_assembler.py
forge/assets/: cache.py  foundry.py
forge/compiler/: prompts.py  schema.py  vision_compiler.py
forge/continuity/: __init__.py  color_calibration.py
forge/generation/: base.py  cogvideo_pipeline.py  heavy_pipeline.py  kling_auth.py  light_pipeline.py  mock_pipeline.py  router.py
forge/providers/: __init__.py  imagegen.py  llm.py  vlm.py
forge/scheduler/: cpm.py  dag.py  dag_validator.py  scheduler.py
forge/validation/: vlm_validator.py
forge/webui/: app.py
scripts/: run_cogvideo_demo.py
tests/: test_cpm.py  test_dag.py  test_dag_validator.py  test_scheduler.py
